k8s/cpu-evaluator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${HE_CPU_DEPLOYMENT}
  namespace: ${HE_NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${HE_CPU_DEPLOYMENT}
  template:
    metadata:
      labels:
        app: ${HE_CPU_DEPLOYMENT}
    spec:
      containers:
        - name: ${HE_CPU_DEPLOYMENT}
          image: ${HE_CPU_IMAGE}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: ${HE_SERVICE_PORT}
          resources:
            requests:
              cpu: "${HE_CPU_REQUEST_CPU}"
              memory: ${HE_CPU_REQUEST_MEMORY}
            limits:
              cpu: "${HE_CPU_LIMIT_CPU}"
              memory: ${HE_CPU_LIMIT_MEMORY}
---
apiVersion: v1
kind: Service
metadata:
  name: ${HE_CPU_SERVICE}
  namespace: ${HE_NAMESPACE}
spec:
  selector:
    app: ${HE_CPU_DEPLOYMENT}
  ports:
    - name: http
      port: ${HE_SERVICE_PORT}
      targetPort: http
